fix: styling and spacing form

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,11 +26,15 @@ main {
     padding: 1em;
 }
 
-#device {
+#device, #app {
     display: flex;
     gap: 0.5em;
     margin-top: 0.5em;
     flex-wrap: wrap;
+}
+#who, .title {
+    display: flex;
+    flex-direction: column;
 }
 
 .shortcutQuestions {
@@ -44,7 +48,7 @@ main {
         margin-top: 1.5em;
         display: flex;
         flex-direction: column;
-        gap: 0.1em;
+        gap: 0.5em;
         & > div {
             padding: 0.5em;
             background-color: rgb(246, 244, 255);
@@ -88,6 +92,11 @@ main {
     }
 }
 
+.icon-bigger {
+    scale: 1.6;
+}
+
+/* from: https://getcssscan.com/css-checkboxes-examples */
 .checkbox-wrapper-16 *,
 .checkbox-wrapper-16 *:after,
 .checkbox-wrapper-16 *:before {
@@ -173,10 +182,12 @@ main {
 .checkbox-wrapper-16 .checkbox-icon {
     transition: 0.375s ease;
     color: #494949;
-}
-.checkbox-wrapper-16 .checkbox-icon svg {
-    width: 3rem;
-    height: 3rem;
+    & img, svg {
+        width: 3rem;
+        height: 3rem;
+        object-fit: contain;
+    }
+
 }
 
 .checkbox-wrapper-16 .checkbox-label {
